--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 
     </div>
+    <div id="score">
 
+    </div>
 
     <button class="btn btn-primary" onclick="app.JepordyController.showAnswer()">show answer</button>
     <button class="btn btn-primary" onclick="app.JepordyController.nextQuestion()">next question</button>
